--- a/ui/ui_template/package.json
+++ b/ui/ui_template/package.json
@@ -21,7 +21,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
     "waait": "^1.0.5"
   },
   "scripts": {
