--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "faker": "^4.1.0",
     "handlebars": "^4.7.6",
     "ncp": "^2.0.0"
   },
