--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "concat-stream": "^2.0.0",
     "ncp": "^2.0.0",
     "toml": "^3.0.0",
+    "toml-require": "^1.2.0",
     "util": "^0.12.2"
   },
   "repository": {
