--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {},
   "dependencies": {
     "concat-stream": "^2.0.0",
+    "lodash": "^4.17.15",
     "ncp": "^2.0.0",
     "toml": "^3.0.0",
     "toml-require": "^1.2.0",
