--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {},
   "dependencies": {
     "chalk": "^4.0.0",
+    "faucet": "0.0.1",
     "lodash": "^4.17.15",
     "ncp": "^2.0.0",
     "toml": "^3.0.0",
