--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "description": "The second tier of RAD tools, automating a UI GraphQL and DNA generation based on a JSON schema file.",
   "main": "index.js",
   "scripts": {
-    "generate:happ": "npm run clear-happ && npm run generate:ui && npm run hc:generate-dna",
-    "generate:ui": "node src/ui-setup/scripts/generate-ui",
+    "start": "npm run start:sim2h && npm run hc:start; npm run ui:start",
+    "start:sim2h": "sim2h_server -p 9000 &> sim2h-server.log &",
+    "generate": "npm run happ:remove && npm run ui:generate && npm run hc:generate-dna",
+    "install": "cd dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
+    "happ:remove": "rm -rf dna-src/ ui-src/",
+    "ui:start": "cd ui-src && npm run ui:connect-to-conductor",
+    "ui:generate": "node src/ui-setup/scripts/generate-ui",
     "ui:generate-clean": "rm -rf ui-src/*",
-    "ui:start": "cd ui-src && npm run start",
+    "hc:clean-storage": "rm -rf ./.holochain/holo/storage",
     "hc:generate-dna": "node src/dna-setup/scripts/generate-dna",
+    "hc:config-add-agent": "node setup/agent-setup/add-agent-to-conductor",
+    "hc:keygen": "node setup/agent-setup/create-new-agent",
     "hc:package": "cd dna-src && hc package",
+    "hc:build": "npm run hc:package",
     "hc:test": "cd dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
-    "hc:start": "holochain -c conductor-config.toml",
-    "start": "npm run hc:start && npm rn ui:start",
-    "clear-happ": "rm -rf dna-src/ ui-src/"
+    "hc:start": "holochain -c conductor-config.toml &> conductor.log &"
   },
   "devDependencies": {},
   "dependencies": {
     "chalk": "^4.0.0",
-    "faucet": "0.0.1",
     "lodash": "^4.17.15",
     "ncp": "^2.0.0",
     "toml": "^3.0.0",
