--- a/src/ui-setup/ui-template/package.json
+++ b/src/ui-setup/ui-template/package.json
@@ -1,26 +1,17 @@
 {
-  "name": "holochain-rad-tools-phase-2",
+  "name": "holochain-rad-tools-phase-2-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm run start:sim2h && npm run hc:start && npm run ui:connect-to-conductor",
-    "start:sim2h": "sim2h_server -p 9000",
-    "ui:start": "cd ui-src && npm run ui:start-live",
-    "ui:start-mock": "cd ui-src && REACT_APP_MOCK_DNA_CONNECTION='true' react-scripts start",
-    "ui:start-live": "cd ui-src && REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts start",
-    "ui:start-agent-1": "cd ui-src && PORT=3100 REACT_APP_DNA_INTERFACE_URL=ws://localhost:3400 npm run start:live",
-    "ui:start-agent-2": "cd ui-src && PORT=3101 REACT_APP_DNA_INTERFACE_URL=ws://localhost:3401 npm run start:live",
-    "ui:build": "cd ui-src && react-scripts build",
-    "ui:test": "cd ui-src && react-scripts test",
-    "ui:eject": "cd ui-src && react-scripts eject",
-    "ui:connect-to-conductor": "cd ui-src && node connect-to-conductor",
-    "hc:clean-storage": "rm -rf ./.holochain/holo/storage",
-    "hc:keygen": "node setup/agent-setup/create-new-agent",
-    "hc:config-add-agent": "node setup/agent-setup/add-agent-to-conductor",
-    "hc:package": "cd dna-src && hc package",
-    "hc:build": "npm run hc:package",
-    "hc:test": "cd dna-src && hc test",
-    "hc:start": "holochain -c conductor-config.toml"
+    "ui:start": "npm run ui:start-live",
+    "ui:start-mock": "REACT_APP_MOCK_DNA_CONNECTION='true' react-scripts start",
+    "ui:start-live": "REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts start",
+    "ui:start-agent-1": "PORT=3100 REACT_APP_DNA_INTERFACE_URL=ws://localhost:3400 npm run start:live",
+    "ui:start-agent-2": "PORT=3101 REACT_APP_DNA_INTERFACE_URL=ws://localhost:3401 npm run start:live",
+    "ui:build": "react-scripts build",
+    "ui:test": "react-scripts test",
+    "ui:eject": "react-scripts eject",
+    "ui:connect-to-conductor": "node connect-to-conductor"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
