--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,9 @@ target/
 .cargo
 .DS_STORE
 
-conductor-config.toml
 keystores
 dna-src
 ui-src
+conductor-config.toml
 conductor.log
+sim2h-server.log
