--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "hc:test": "cd dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
     "hc:start": "holochain -c conductor-config.toml &> conductor.log &",
     "hc:generate-conductor": "node src/setup/conductor-setup/generate-conductor",
-    "hc:run": "npm run hc:package && cd dna-src && hc run -p 3400"
+    "hc:run": "npm run hc:package && cd dna-src && hc run -p 3400",
+    "futures-overwrite": "touch ./cargo/config"
   },
   "devDependencies": {},
   "dependencies": {
