add second type to sample spec

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The second tier of RAD tools, automating a UI GraphQL and DNA generation based on a JSON schema file.",
   "main": "index.js",
   "scripts": {
-    "start": "npm run start:sim2h && npm run hc:start; npm run ui:start",
+    "start": "npm run hc:start; npm run ui:start",
     "start:sim2h": "sim2h_server -p 9000 &> sim2h-server.log &",
     "happ:install": "cd dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
     "happ:generate": "npm run happ:remove && npm run ui:generate && npm run hc:generate-dna",
@@ -19,7 +19,7 @@
     "hc:package": "cd dna-src && hc package",
     "hc:build": "npm run hc:package",
     "hc:test": "cd dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
-    "hc:start": "holochain -c conductor-config.toml &> conductor.log &",
+    "hc:start": "npm run start:sim2h && holochain -c conductor-config.toml &> conductor.log &",
     "hc:generate-conductor": "node src/setup/conductor-setup/generate-conductor",
     "hc:run": "npm run hc:package && cd dna-src && hc run -p 3400"
   },
