--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "The second tier of RAD tools, automating a UI GraphQL and DNA generation based on a JSON schema file.",
   "main": "index.js",
   "scripts": {
-    "start": "npm run hc:start-log-file; npm run ui:start",
-    "start:sim2h": "sim2h_server -p 9000 &> sim2h-server.log &",
+    "start": "npm run hc:start-log; npm run ui:start",
+    "sim2h:start": "sim2h_server -p 9000 &> sim2h-server.log &",
+    "sim2h:clear-local": "kill -9 $(lsof -t -i:9000)",
+    "happ:start": "npm run start",
     "happ:generate": "npm run happ:remove && npm run ui:generate && npm run hc:generate-dna && npm run happ:install",
     "happ:install": "cd dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
-    "happ:remove": "npm run hc:clean-storage && rm -rf dna-src/ ui-src/ .cargo/ target/",
+    "happ:refresh": "npm run hc:clean-storage && npm run sim2h:clear-local",
+    "happ:remove": "npm run happ:refresh && rm -rf dna-src/ ui-src/ .cargo/ target/",
     "ui:start": "cd ui-src && npm run ui:connect-to-conductor",
     "ui:generate": "node src/ui-setup/scripts/generate-ui",
-    "ui:generate-clean": "rm -rf ui-src/*",
+    "ui:remove": "rm -rf ui-src/*",
     "hc:clean-storage": "rm -rf ./.holochain/holo/storage",
     "hc:generate-dna": "node src/dna-setup/scripts/generate-dna",
     "hc:config-add-agent": "node setup/conductor-setup/add-agent-to-conductor",
@@ -20,8 +23,8 @@
     "hc:package": "cd dna-src && hc package",
     "hc:build": "npm run hc:package",
     "hc:test": "cd dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
-    "hc:start-log-file": "holochain -c conductor-config.toml &> conductor.log &",
-    "hc:start": "npm run start:sim2h && holochain -c conductor-config.toml",
+    "hc:start-log": "npm run sim2h:start && holochain -c conductor-config.toml &> conductor.log &",
+    "hc:start": "npm run sim2h:start && holochain -c conductor-config.toml",
     "hc:run": "npm run hc:package && cd dna-src && hc run -p 3400"
   },
   "devDependencies": {},
