--- a/src/ui-setup/ui-template/package.json
+++ b/src/ui-setup/ui-template/package.json
@@ -6,8 +6,7 @@
     "ui:start": "npm run ui:start-live",
     "ui:start-mock": "REACT_APP_MOCK_DNA_CONNECTION='true' react-scripts start",
     "ui:start-live": "REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts start",
-    "ui:start-agent-1": "PORT=3100 REACT_APP_DNA_INTERFACE_URL=ws://localhost:3400 npm run ui:start-live",
-    "ui:start-agent-2": "PORT=3101 REACT_APP_DNA_INTERFACE_URL=ws://localhost:3401 npm run ui:start-live",
+    "ui:start-agent": "PORT=3100 npm run ui:start-live",
     "ui:build": "react-scripts build",
     "ui:test": "react-scripts test",
     "ui:eject": "react-scripts eject",
