--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "sim2h:start": "sim2h_server -p 9000 &> sim2h-server.log &",
     "sim2h:clear-local": "kill -9 $(lsof -t -i:9000)",
     "happ:start": "npm run start",
-    "happ:generate": "npm run happ:remove && npm run ui:generate && npm run hc:generate-dna && npm run happ:install && npm run hc:package && npm run hc:generate-conductor",
-    "happ:install": "cd dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
+    "happ:generate": "npm run happ:remove && cp -r src/setup happ && npm run ui:generate && npm run hc:generate-dna && npm run happ:install && cd happ && npm run hc:package && npm run hc:generate-conductor",
+    "happ:install": "npm i && cd happ/dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
     "happ:refresh": "npm run hc:clean-storage && npm run sim2h:clear-local",
-    "happ:remove": "npm run hc:clean-storage && rm -rf dna-src/ ui-src/ .cargo/ target/",
-    "ui:start": "cd ui-src && npm run ui:connect-to-conductor",
+    "happ:remove": "npm run hc:clean-storage && rm -rf happ",
+    "ui:start": "cd ui-src && npm run ui:wait-for-conductor start-ui",
     "ui:generate": "node src/ui-setup/scripts/generate-ui",
     "ui:remove": "rm -rf ui-src/*",
-    "hc:clean-storage": "rm -rf ./.holochain/holo/storage",
+    "hc:clean-storage": "rm -rf happ/.holochain/holo/storage",
     "hc:generate-dna": "node src/dna-setup/scripts/generate-dna",
     "hc:config-add-agent": "node src/setup/conductor-setup/add-agent-to-conductor",
     "hc:keygen": "node src/setup/conductor-setup/create-new-agent",
