--- a/src/setup/package.json
+++ b/src/setup/package.json
@@ -7,15 +7,18 @@
       "start:sim2h": "sim2h_server -p 9000 &> sim2h-server.log &",
       "happ:start": "npm run start",
       "happ:refresh": "npm run hc:clean-storage && npm run sim2h:clear-local",
-      "happ:install": "cd dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
-      "ui:start": "cd ui-src && npm run ui:connect-to-conductor",
+      "happ:install": "npm i && cd dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
+      "ui:start": "cd ui-src && npm run ui:wait-for-conductor start-ui",
       "hc:clean-storage": "rm -rf ./.holochain/holo/storage",
       "hc:config-add-agent": "node setup/conductor-setup/add-agent-to-conductor",
       "hc:keygen": "node setup/conductor-setup/create-new-agent",
       "hc:package": "cd dna-src && hc package",
       "hc:build": "npm run hc:package",
       "hc:test": "cd dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
-      "hc:start": "holochain -c conductor-config.toml &> conductor.log &"
+      "hc:start": "holochain -c conductor-config.toml &> conductor.log &",
+      "hc:stop": "killall holochain",
+      "test:integration": "nix-shell --command 'REACT_APP_INTEGRATION_TEST=true react-scripts test --config=./ui-src/jest.integration.config.js'",
+      "test:wait-for-conductor": "node ui-src/wait-for-conductor.js"
     },
     "devDependencies": {},
     "dependencies": {
@@ -23,7 +26,8 @@
       "lodash": "^4.17.15",
       "ncp": "^2.0.0",
       "toml": "^3.0.0",
-      "util": "^0.12.2"
+      "util": "^0.12.2",
+      "react-scripts": "3.4.0"
     },
     "repository": {
       "type": "git",
