restructured conductor setup paths; updated dna-src source and dest file paths

--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "sim2h:start": "sim2h_server -p 9000 &> sim2h-server.log &",
     "sim2h:clear-local": "kill -9 $(lsof -t -i:9000)",
     "happ:start": "npm run start",
-    "happ:generate": "npm run happ:remove && cp -r src/setup happ && npm run ui:generate && npm run hc:generate-dna && npm run happ:install && cd happ && npm run hc:package && npm run hc:generate-conductor",
+    "happ:generate": "npm run happ:remove && cp -r src/setup happ && npm run ui:generate && npm run hc:generate-dna && npm run happ:install && cd happ && npm run hc:package && cd .. && npm run hc:generate-conductor && mv ./.cargo ./happ/.cargo && mv ./.target ./happ/.target",
     "happ:install": "npm i && cd happ/dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
     "happ:refresh": "npm run hc:clean-storage && npm run sim2h:clear-local",
     "happ:remove": "npm run hc:clean-storage && rm -rf happ",
-    "ui:start": "cd ui-src && npm run ui:wait-for-conductor start-ui",
+    "ui:start": "cd ./happ/ui-src && npm run ui:wait-for-conductor start-ui",
     "ui:generate": "node src/ui-setup/scripts/generate-ui",
     "ui:remove": "rm -rf ui-src/*",
-    "hc:clean-storage": "rm -rf happ/.holochain/holo/storage",
+    "hc:clean-storage": "rm -rf ./happ/.holochain/holo/storage",
     "hc:generate-dna": "node src/dna-setup/scripts/generate-dna",
-    "hc:config-add-agent": "node src/setup/conductor-setup/add-agent-to-conductor",
-    "hc:keygen": "node src/setup/conductor-setup/create-new-agent",
-    "hc:generate-conductor": "node src/setup/conductor-setup/generate-conductor",
-    "hc:package": "cd dna-src && hc package",
+    "hc:config-add-agent": "node src/setup/scripts/add-agent-to-conductor",
+    "hc:keygen": "node src/setup/scripts/create-new-agent",
+    "hc:generate-conductor": "node src/conductor-setup/generate-conductor",
+    "hc:package": "cd ./happ/dna-src && hc package",
     "hc:build": "npm run hc:package",
-    "hc:test": "cd dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
-    "hc:start-log": "npm run sim2h:start && holochain -c conductor-config.toml &> conductor.log &",
-    "hc:start": "npm run sim2h:start && holochain -c conductor-config.toml"
+    "hc:test": "cd ./happ/dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
+    "hc:start-log": "npm run sim2h:start && cd ./happ && holochain -c conductor-config.toml &> conductor.log &",
+    "hc:start": "npm run sim2h:start && cd ./happ && holochain -c conductor-config.toml"
   },
   "devDependencies": {},
   "dependencies": {
